    have to do without the disk bar for Feisty at this point.
  * KDE frontend: Fix disk selection handling in automatic partitioner so
    that we stop always selecting the last disk no matter what (LP: #83010).
  * Reluctantly print error messages from main program to stdout rather than
    stderr, as gksudo swallows them otherwise.

 -- Colin Watson <cjwatson@debian.org>  Wed,  7 Mar 2007 15:57:17 +0000

ubiquity (1.3.25) feisty; urgency=low

  [ Evan Dandrea ]
  * Handle spaces in usernames in migration-assistant. (LP: #89009)
  * Fixed list movement bugs on the Migration page.  Also, selecting an
    item now selects the user as well.  (LP: #89414)
  * The Migration page now auto-fills the username box, matching the
    behavior on the User Setup page. (LP: #89522)
  * Stopped the username auto fill on User Setup from clobbering the m-a
    username.

  [ Colin Watson ]
  * GTK frontend:
    - Don't reset partition_edit_mount_combo's cell renderer; doing so
      causes GTK warnings.
    - Add more space around text in question dialogs.
  * New partitioner: Allow changing the mount point for NTFS (LP: #90276).
  * Automatically unmount mounted partitions if they are on a changed
    partition table or they are to be mounted somewhere other than /media/*.
    Display an error and allow the user to try to unmount them manually if
    automatic unmounting fails (LP: #89605).
  * Work around datetime misbehaviour if the system clock is set before the
    Unix epoch (LP: #57952).
  * Add XS-Vcs-Bzr field to debian/control.
  * Automatic update of included source packages: console-setup 1.13ubuntu7,
    localechooser 1.37ubuntu1, migration-assistant 0.4.1, partman-auto
    62ubuntu6, partman-base 100ubuntu7, partman-efi 11ubuntu3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed,  7 Mar 2007 15:21:48 +0000

ubiquity (1.3.24) feisty; urgency=low

  * KDE Frontend:
    - Fix type problems in partition edit dialogue
